[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scripts/aim.gd" type="Script" id=2]
[ext_resource path="res://ui/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/BookInterface.tscn" type="PackedScene" id=4]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="World" type="Spatial" parent="."]

[node name="IngameUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="aim" type="ColorRect" parent="IngameUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_right = 8.0
margin_bottom = 14.0
color = Color( 0.113725, 0.0823529, 1, 0.403922 )
script = ExtResource( 2 )

[node name="TargetName" type="Label" parent="IngameUI/aim"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -173.0
margin_top = 22.0
margin_right = 174.0
margin_bottom = 53.0
align = 1

[node name="PauseMenu" parent="." instance=ExtResource( 3 )]
visible = false

[node name="BookInterface" parent="." instance=ExtResource( 4 )]
visible = false
